--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <sonar.organization>cloudjunction-devops</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.login>8da4b6fd865b867d19d2851d65ccfacb54c40327</sonar.login>
+    
   </properties>
 
   <dependencies>
