--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <sonar.organization>cloudjunction-devops</sonar.organization>
+    <sonar.organization>mahadevdevops</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.login>8557b64a976c0c42581006e51b5ecff205e028e0</sonar.login>
+    <sonar.login>c6b63d6e3eb7b3f3a4d084488cdf5a5cde7b9759</sonar.login>
     
   </properties>
 
